--- a/style.css
+++ b/style.css
@@ -301,7 +301,10 @@ span{
 .title{
     display: flex;
     justify-content: center;
-    margin: 10rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
 }
 
 
@@ -516,7 +519,56 @@ span{
 
 
 .kontakt{
+    padding: 20px;
+}
 
+.content-form{
+    max-width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: black; 
+    padding: 20px;
+    border-radius: 8px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+form input, form textarea{
+    width: 100%;
+    max-width: 400px; 
+    padding: 12px;
+    margin: 10px 0;
+    border: 2px solid cyan; 
+    border-radius: 4px;
+    background-color: white;
+    color: black;
+}
+
+form textarea{
+    height: 120px; 
+}
+
+button{
+    padding: 14px 28px; 
+    background-color: black; 
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px; 
+    cursor: pointer;
+    transition: 1s ease;
+    margin-top: 2rem;
+}
+
+button:hover{
+    background-color: cyan;
+    color: black;
+    box-shadow: 0 0 10px cyan;
 }
 
 
@@ -864,16 +916,7 @@ footer{
 
 
 
-    .boxes{
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: 5rem;
-    }
-
-    .boxes-dva{
-        display: flex;
-        justify-content: space-evenly;
-    }
+    
     
     .box{
         height: 30rem;
@@ -894,13 +937,15 @@ footer{
         background-color: cyan;
         justify-content: center;
         text-align: center;
-        
-        .icon{
-            border: 1px solid black;
-            background-color: cyan;
-            color: black;
-            margin-top: 1px;
-        }
+        display: flex;
+        flex-direction: column;
+    }
+
+    .box:hover .icon{
+        border: 1px solid black;
+        background-color: cyan;
+        color: black;
+        margin-top: -14rem;
     }
 
     .icon{
@@ -918,14 +963,25 @@ footer{
     }
 
     .topic{
-        color: black;
-        font-size: 1.5rem;
-        margin: 10px;
+        display: none;
     }
     
     .box p{
+        display: none;
+    }
+
+    .box:hover .topic{
         color: black;
-        font-size: 1.3rem;
+        font-size: 1.5rem;
+        margin: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .box:hover p{
+        color: black;
+        font-size: 1rem;
+        display: block;
     }
 
 
@@ -933,6 +989,32 @@ footer{
     
     
     
+    .content {
+        padding: 40px;
+    }
+
+    .text .topic {
+        font-size: 24px;
+    }
+
+    form input, form textarea {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    form textarea {
+        height: 150px;
+    }
+
+    button {
+        padding: 12px 30px;
+        font-size: 18px;
+    }
+
+
+
+
+
     
     
     
