--- a/style.css
+++ b/style.css
@@ -715,6 +715,7 @@ footer{
         height: 100%;
         align-items: center;
         flex-direction: row;
+        justify-content: space-between;
     }
     
     .divlogo{
@@ -722,14 +723,14 @@ footer{
         margin-right: 80rem;
     }
     
-    .nav-container .navigace{
+    header nav .nav-container .navigace{
         display: inline-flex;
         border-left: 0;
         border-bottom: 0;
         background-color: transparent;
         width: max-content;
         position: relative;
-        justify-content: end;
+        flex-direction: row;
     }
 
     .navigace a{
